# hivewiki-builder

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  Dockerfile  README.md  consumer.py  main.py  pyproject.toml
.github/workflows/: build-image.yml
config/: pipeline.py  settings.py
data/: dataloader.py  db_reader.py  db_writer.py  payload.py
evaluation/: bench.py  metrics.py  rubric.py
storm_engine/: clusterer.py  llm_config.py  outline_generator.py  validator.py  wiki_generator.py  wiki_runner.py
