[project]
name = "hivewiki-builder"
version = "0.1.0"
description = "Content processing and wiki generation service for HiveWiki"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic>=0.49.0",
    "feedparser>=6.0.12",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "knowledge-storm>=1.1.1",
    "langchain-core>=1.3.3",
    "langsmith>=0.8.0",
    "lxml>=6.1.0",
    "mako>=1.3.12",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "ujson>=5.12.1",
    "urllib3>=2.7.0",
]

[dependency-groups]
dev = ["pre-commit>=4.5.1"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
